Fix fork dialog padding (#316)
* Centre fork dialog buttons and add bottom padding

The buttons were flush against the left edge; they are now horizontally
centred. Bottom padding increased so the dialog does not feel cramped
below the last button.


* Fix donate dialog text and email link

Lowercase "donate via PayPal" to match the site's style, and make the
license email address a clickable mailto link.


---------

--- a/source/app/assets/stylesheets/fork-dialog.scss
+++ b/source/app/assets/stylesheets/fork-dialog.scss
@@ -1,9 +1,13 @@
 #fork-dialog
 {
+  padding-bottom: 1em;
+
   button.kata, button.group
   {
     display: block;
     margin-top: 6px;
+    margin-left: auto;
+    margin-right: auto;
     padding: 8px;
     font-size: 25px;
     @include non-code-font();
